Revert "Merge pull request #145 from atom/sm-buttons"
This reverts commit 6eb665c542efdf899b59507ee3f4dcaad47a7cff, reversing
changes made to 3a77b17b8c7efc38cf29be5a5514ac1f13799519.

--- a/styles/notifications.less
+++ b/styles/notifications.less
@@ -204,15 +204,8 @@ atom-notification {
     }
   }
 
-  .btn-toolbar.btn-toolbar {
-    margin-top: 10px;
-    margin-bottom: -5px;
-    margin-left: 0;
-  }
-
-  .btn-toolbar.btn-toolbar > .btn {
-    margin-left: 0;
-    margin-bottom: 5px;
+  .btn-toolbar {
+    margin-top:  @component-padding;
   }
 
   .btn-copy-report {
